# PA-Calculator

./: .gitignore  ArithmeticCalculator.cpp  ArithmeticCalculator.h  CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorDisplay.qml  CalculatorGrid.qml  CalculatorLayout.qml  CalculatorWindow.qml  ErrorHandler.cpp  ErrorHandler.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionParser.cpp  ExpressionParser.h  Main.qml  ModeSelector.qml  PensionCalculator.cpp  PensionCalculator.h  Tokenizer.cpp  Tokenizer.h  main.cpp
